--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,6 +54,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: siliconflow/silicondiff-npu
+          ref: main
           token: ${{ secrets.GH_PRIV_TOKEN }}
           path: "."
 
