--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ on:
       torch_version:
         type: string
         required: true
+        default: "2.1.0"
         description: "Example: 2.3.0"
     secrets:
       GH_PRIV_TOKEN:
@@ -39,7 +40,8 @@ on:
       torch_version:
         type: string
         required: true
-        description: "Example: 2.3.0 or 2.4.0.dev20240507"
+        default: "2.1.0"
+        description: "Example: 2.3.0"
 
 jobs:
   build:
