--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,11 @@ on:
         required: true
         default: "ubuntu-20.04"
         description: "Example: ubuntu-20.04 or windows-2019"
+      tag:
+        type: string
+        required: true
+        default: "main"
+        description: "Example: main or v2.1.0, v2.2.0"
       python:
         type: string
         required: true
@@ -32,6 +37,11 @@ on:
         required: true
         default: "ubuntu-20.04"
         description: "Example: ubuntu-20.04 or windows-2019"
+      tag:
+        type: string
+        required: true
+        default: "main"
+        description: "Example: main or v2.1.0, v2.2.0"
       python:
         type: string
         required: true
@@ -53,7 +63,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: siliconflow/silicondiff-npu
-          ref: main
+          ref: ${{ inputs.tag }}
           token: ${{ secrets.GH_PRIV_TOKEN }}
           path: "."
 
