--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,7 +14,20 @@ on:
   push:
     branches:
       - add-repair
+  workflow_call:
+    inputs:
+      torch_version:
+        type: string
+        required: true
+        default: "2.1.0"
+        description: "Example: 2.1.0"
   workflow_dispatch:
+    inputs:
+      torch_version:
+        type: string
+        required: true
+        default: "2.1.0"
+        description: "Example: 2.1.0"
 
 permissions:
   contents: read
@@ -32,22 +45,16 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          # - windows-2019
-          # - 8-core-ubuntu
-          # - windows-8-core
         python:
           - "3.8"
           - "3.9"
           - "3.10"
-        torch_version:
-          - "2.1.0"
-          # - "2.2.0"
-          # - "2.3.0"
     uses: ./.github/workflows/build.yaml
     with:
       os: ${{ matrix.os }}
+      tag: "v${{ inputs.torch_version }}"
       python: ${{ matrix.python }}
-      torch_version: ${{ matrix.torch_version }}
+      torch_version: ${{ inputs.torch_version }}
     secrets:
       GH_PRIV_TOKEN: ${{ secrets.GH_PRIV_TOKEN }}
 
