--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,11 +17,11 @@ on:
         required: true
         default: "3.10"
         description: "Build python version. Example: 3.10"
-      tag:
+      silicondiff_tag:
         type: string
         required: true
         default: "main"
-        description: "Build silicondiff-npu version. Example: main or v2.1.0, v2.2.0"
+        description: "Build silicondiff-npu version. Example: main or v2.1.0, v2.1.0.post3"
       torch_version:
         type: string
         required: true
@@ -42,11 +42,11 @@ on:
         required: true
         default: "3.10"
         description: "Build python version. Example: 3.10"
-      tag:
+      silicondiff_tag:
         type: string
         required: true
         default: "main"
-        description: "Build silicondiff-npu version. Example: main or v2.1.0, v2.2.0"
+        description: "Build silicondiff-npu version. Example: main or v2.1.0, v2.1.0.post3"
       torch_version:
         type: string
         required: true
@@ -63,7 +63,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: siliconflow/silicondiff-npu
-          ref: ${{ inputs.tag }}
+          ref: ${{ inputs.silicondiff_tag }}
           token: ${{ secrets.GH_PRIV_TOKEN }}
           path: "."
 
